dependency-GPUDirect-and-MOFED/nvidia-gpu-operator_20251121_1019/gpu_operator_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    alm-examples: |-
      [
        {
          "apiVersion": "nvidia.com/v1",
          "kind": "ClusterPolicy",
          "metadata": {
            "name": "gpu-cluster-policy"
          },
          "spec": {
            "operator": {
              "defaultRuntime": "crio",
              "use_ocp_driver_toolkit": true,
              "initContainer": {
              }
            },
            "cdi": {
              "enabled": true
            },
            "sandboxWorkloads": {
              "enabled": false,
              "defaultWorkload": "container"
            },
            "driver": {
              "enabled": true,
              "useNvidiaDriverCRD": false,
              "kernelModuleType": "auto",
              "upgradePolicy": {
                "autoUpgrade": true,
                "drain": {
                  "deleteEmptyDir": false,
                  "enable": false,
                  "force": false,
                  "timeoutSeconds": 300
                },
                "maxParallelUpgrades": 1,
                "maxUnavailable": "25%",
                "podDeletion": {
                  "deleteEmptyDir": false,
                  "force": false,
                  "timeoutSeconds": 300
                },
                "waitForCompletion": {
                  "timeoutSeconds": 0
                }
              },
              "repoConfig": {
                "configMapName": ""
              },
              "certConfig": {
                "name": ""
              },
              "licensingConfig": {
                "nlsEnabled": true,
                "secretName": ""
              },
              "virtualTopology": {
                "config": ""
              },
              "kernelModuleConfig": {
                "name": ""
              }
            },
            "dcgmExporter": {
              "enabled": true,
              "config": {
                "name": ""
              },
              "serviceMonitor": {
                "enabled": true
              }
            },
            "dcgm": {
              "enabled": true
            },
            "daemonsets": {
              "updateStrategy": "RollingUpdate",
              "rollingUpdate": {
                "maxUnavailable": "1"
              }
            },
            "devicePlugin": {
              "enabled": true,
              "config": {
                "name": "",
                "default": ""
              },
              "mps": {
                "root": "/run/nvidia/mps"
              }
            },
            "gfd": {
              "enabled": true
            },
            "migManager": {
              "enabled": true
            },
            "nodeStatusExporter": {
              "enabled": true
            },
            "mig": {
              "strategy": "single"
            },
            "toolkit": {
              "enabled": true
            },
            "validator": {
              "plugin": {
                "env": []
              }
            },
            "vgpuManager": {
              "enabled": false
            },
            "vgpuDeviceManager": {
              "enabled": true
            },
            "sandboxDevicePlugin": {
              "enabled": true
            },
            "vfioManager": {
              "enabled": true
            },
            "gds": {
              "enabled": false
            },
            "gdrcopy": {
              "enabled": false
            }
          }
        },
        {
          "apiVersion": "nvidia.com/v1alpha1",
          "kind": "NVIDIADriver",
          "metadata": {
            "name": "gpu-driver"
          },
          "spec": {
            "driverType": "gpu",
            "repository": "nvcr.io/nvidia",
            "image": "driver",
            "version": "sha256:317c7ab01f28c87dc8c209b38c49fb2758a595d9ffbc1d71e18530788dcf34be",
            "nodeSelector": {},
            "manager": {},
            "repoConfig": {
              "name": ""
            },
            "certConfig": {
              "name": ""
            },
            "licensingConfig": {
              "nlsEnabled": true,
              "secretName": ""
            },
            "virtualTopologyConfig": {
              "name": ""
            },
            "kernelModuleConfig": {
              "name": ""
            }
          }
        }
      ]
    capabilities: Deep Insights
    categories: AI/Machine Learning, OpenShift Optional
    certified: "true"
    containerImage: nvcr.io/nvidia/gpu-operator@sha256:d4841412c9b8d27c53b1588dcebffc5451e9ab0fd36b2c656c33a65356507cfd
    createdAt: Fri Oct 24 13:56:11 PDT 2025
    description: Automate the management and monitoring of NVIDIA GPUs.
    features.operators.openshift.io/cnf: "false"
    features.operators.openshift.io/cni: "false"
    features.operators.openshift.io/csi: "false"
    features.operators.openshift.io/disconnected: "true"
    features.operators.openshift.io/fips-compliant: "false"
    features.operators.openshift.io/proxy-aware: "true"
    features.operators.openshift.io/tls-profiles: "false"
    features.operators.openshift.io/token-auth-aws: "false"
    features.operators.openshift.io/token-auth-azure: "false"
    features.operators.openshift.io/token-auth-gcp: "false"
    k8s.ovn.org/pod-networks: '{"default":{"ip_addresses":["10.254.0.15/23"],"mac_address":"0a:58:0a:fe:00:0f","gateway_ips":["10.254.0.1"],"routes":[{"dest":"10.254.0.0/16","nextHop":"10.254.0.1"},{"dest":"172.31.0.0/16","nextHop":"10.254.0.1"},{"dest":"169.254.0.5/32","nextHop":"10.254.0.1"},{"dest":"100.64.0.0/16","nextHop":"10.254.0.1"}],"ip_address":"10.254.0.15/23","gateway_ip":"10.254.0.1","role":"primary"}}'
    k8s.v1.cni.cncf.io/network-status: |-
      [{
          "name": "ovn-kubernetes",
          "interface": "eth0",
          "ips": [
              "10.254.0.15"
          ],
          "mac": "0a:58:0a:fe:00:0f",
          "default": true,
          "dns": {}
      }]
    olm.operatorGroup: nvidia-gpu-operator
    olm.operatorNamespace: nvidia-gpu-operator
    olm.skipRange: '>=1.9.0 <25.10.0'
    olm.targetNamespaces: nvidia-gpu-operator
    openshift.io/scc: hostmount-anyuid
    operatorframework.io/properties: '{"properties":[{"type":"olm.gvk","value":{"group":"nvidia.com","kind":"ClusterPolicy","version":"v1"}},{"type":"olm.gvk","value":{"group":"nvidia.com","kind":"NVIDIADriver","version":"v1alpha1"}},{"type":"olm.package","value":{"packageName":"gpu-operator-certified","version":"25.10.0"}}]}'
    operatorframework.io/suggested-namespace: nvidia-gpu-operator
    operators.operatorframework.io/builder: operator-sdk-v1.4.0
    operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
    provider: NVIDIA
    repository: http://github.com/NVIDIA/gpu-operator
    support: NVIDIA
  creationTimestamp: "2025-11-21T08:51:37Z"
  generateName: gpu-operator-54d498cdbc-
  labels:
    app: gpu-operator
    app.kubernetes.io/component: gpu-operator
    nvidia.com/gpu-driver-upgrade-drain.skip: "true"
    pod-template-hash: 54d498cdbc
  name: gpu-operator-54d498cdbc-f2lft
  namespace: nvidia-gpu-operator
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: gpu-operator-54d498cdbc
    uid: 9e0915ec-2bbf-4b96-bd86-b2e8e846b503
  resourceVersion: "449043"
  uid: bb22c64e-28f8-4bf6-95f9-495a380255ad
spec:
  containers:
  - args:
    - --leader-elect
    - --leader-lease-renew-deadline
    - 60s
    command:
    - gpu-operator
    env:
    - name: OPERATOR_NAMESPACE
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.namespace
    - name: VALIDATOR_IMAGE
      value: nvcr.io/nvidia/gpu-operator@sha256:d4841412c9b8d27c53b1588dcebffc5451e9ab0fd36b2c656c33a65356507cfd
    - name: GFD_IMAGE
      value: nvcr.io/nvidia/k8s-device-plugin@sha256:2d16df5f3f12081b4bd6b317cf697e5c7a195c53cec7e0bab756db02a06b985c
    - name: CONTAINER_TOOLKIT_IMAGE
      value: nvcr.io/nvidia/k8s/container-toolkit@sha256:c0d14372bc5d74e882eb60c5c5580459675bf08a2e4c627422cc949af6e9717d
    - name: DCGM_IMAGE
      value: nvcr.io/nvidia/cloud-native/dcgm@sha256:d42cd2afe032d9bfcb101cc2f739683b123a6c744f2732f221362a3cac776806
    - name: DCGM_EXPORTER_IMAGE
      value: nvcr.io/nvidia/k8s/dcgm-exporter@sha256:ed2dfcb708949de649ab8e1b23521cfd1eba89774dbbe662b6835f1ffcaadb1a
    - name: DEVICE_PLUGIN_IMAGE
      value: nvcr.io/nvidia/k8s-device-plugin@sha256:2d16df5f3f12081b4bd6b317cf697e5c7a195c53cec7e0bab756db02a06b985c
    - name: DRIVER_IMAGE
      value: nvcr.io/nvidia/driver@sha256:317c7ab01f28c87dc8c209b38c49fb2758a595d9ffbc1d71e18530788dcf34be
    - name: DRIVER_IMAGE-570
      value: nvcr.io/nvidia/driver@sha256:ef9856ae8491b376364df1f0cad388bcf9983bd2b6c78000523c13536cf828c3
    - name: DRIVER_IMAGE-535
      value: nvcr.io/nvidia/driver@sha256:35359117c5cdf786694d2fdba2ba038e7f673c5d0243c9ed4dc6cdaf6e675e4a
    - name: DRIVER_MANAGER_IMAGE
      value: nvcr.io/nvidia/cloud-native/k8s-driver-manager@sha256:a6c12abacc9c4f51d3653c90fcad32f19799069889338601407eba05fea4ba18
    - name: MIG_MANAGER_IMAGE
      value: nvcr.io/nvidia/cloud-native/k8s-mig-manager@sha256:9194a84d3ff2d99886653add3867ec8ee03755442a6d75844932812a12a968de
    - name: CUDA_BASE_IMAGE
      value: nvcr.io/nvidia/cuda@sha256:d19fe621624c4eb6ac931b8558daa3ecc0c3f07f1e2a52e0267e083d22dceade
    - name: VFIO_MANAGER_IMAGE
      value: nvcr.io/nvidia/cuda@sha256:d19fe621624c4eb6ac931b8558daa3ecc0c3f07f1e2a52e0267e083d22dceade
    - name: SANDBOX_DEVICE_PLUGIN_IMAGE
      value: nvcr.io/nvidia/kubevirt-gpu-device-plugin@sha256:119de9a331a47203858b99901f44d0c4a8052961b4e60327f4b100d0ab8c9df0
    - name: VGPU_DEVICE_MANAGER_IMAGE
      value: nvcr.io/nvidia/cloud-native/vgpu-device-manager@sha256:098c01e11589e08ede9ffb3002d1c3dff424f0f0c5d1bfcbfd54a359073f16dd
    - name: GDRCOPY_IMAGE
      value: nvcr.io/nvidia/cloud-native/gdrdrv@sha256:5c4e61f7ba83d7a64ff2523d447c209ce5bde1ddc79acaf1f32f19620b4912d6
    - name: OPERATOR_CONDITION_NAME
      value: gpu-operator-certified.v25.10.0
    image: nvcr.io/nvidia/gpu-operator@sha256:d4841412c9b8d27c53b1588dcebffc5451e9ab0fd36b2c656c33a65356507cfd
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 3
      httpGet:
        path: /healthz
        port: 8081
        scheme: HTTP
      initialDelaySeconds: 15
      periodSeconds: 20
      successThreshold: 1
      timeoutSeconds: 1
    name: gpu-operator
    ports:
    - containerPort: 8080
      name: metrics
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /readyz
        port: 8081
        scheme: HTTP
      initialDelaySeconds: 5
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    resources:
      limits:
        cpu: 500m
        memory: 1Gi
      requests:
        cpu: 200m
        memory: 200Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - MKNOD
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /host-etc/os-release
      name: host-os-release
      readOnly: true
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-s7pg7
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: sno-arm
  preemptionPolicy: PreemptLowerPriority
  priority: 2000001000
  priorityClassName: system-node-critical
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    seLinuxOptions:
      level: s0:c26,c25
  serviceAccount: gpu-operator
  serviceAccountName: gpu-operator
  terminationGracePeriodSeconds: 10
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  - effect: NoSchedule
    key: node.kubernetes.io/memory-pressure
    operator: Exists
  volumes:
  - hostPath:
      path: /etc/os-release
      type: ""
    name: host-os-release
  - name: kube-api-access-s7pg7
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
      - configMap:
          items:
          - key: service-ca.crt
            path: service-ca.crt
          name: openshift-service-ca.crt
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-11-21T11:49:04Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2025-11-21T08:51:37Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-11-21T11:49:17Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-11-21T11:49:17Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-11-21T08:51:37Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: cri-o://54425d136e350ee0ea9dd5a2baf57f6238873aba3726fc53f84db3f32f685f80
    image: nvcr.io/nvidia/gpu-operator@sha256:d4841412c9b8d27c53b1588dcebffc5451e9ab0fd36b2c656c33a65356507cfd
    imageID: nvcr.io/nvidia/gpu-operator@sha256:04d31f9babb5567fe34d1b68124cf55fb5cddcf1e8c2d8a40fa5154d221a24ce
    lastState: {}
    name: gpu-operator
    ready: true
    restartCount: 2
    started: true
    state:
      running:
        startedAt: "2025-11-21T11:49:03Z"
    volumeMounts:
    - mountPath: /host-etc/os-release
      name: host-os-release
      readOnly: true
      recursiveReadOnly: Disabled
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-s7pg7
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 192.168.44.65
  hostIPs:
  - ip: 192.168.44.65
  phase: Running
  podIP: 10.254.0.15
  podIPs:
  - ip: 10.254.0.15
  qosClass: Burstable
  startTime: "2025-11-21T08:51:37Z"
